--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "env": "^0.0.2",
     "express": "^4.18.1",
+    "mongoose": "^6.4.6",
     "socket.io": "^4.5.1"
   }
 }
